--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,3 @@
 module/* /usr/share/pyshared/shinken/modules/pickle-retention-file-scheduler
 README.md /usr/share/doc/shinken-module-pickle-retention-file-scheduler
-etc/* /etc/shinken
+debian/etc/* /etc/shinken
