--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 shinken-module-pickle-retention-file-generic (1.4-1) unstable; urgency=medium
 
   * New upstream version 1.4
+  * Add replaces shinken-module-retention-picklefile
+  * Add custom config files
+  * Closes: #745458
 
  -- Thibault Cohen <thibault.cohen@savoirfairelinux.com>  Mon, 21 Apr 2014 02:02:41 -0400
