Fix Kaji version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-shinken-mod-pickle-retention-file-generic (1.4.1-2.kaji1) unstable; urgency=medium
+shinken-mod-pickle-retention-file-generic (1.4.1-2kaji0.2) unstable; urgency=medium
 
   * Kaji release
 
